# CodexOrchestratorMCP

./: .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_TS.md  enhanced_progress_schema.md  install.sh  install_mcp.sh  install_toolkit.sh  package-lock.json  package.json  progress_template_generator.sh  progress_watchdog.sh  pyproject.toml  quick-install.sh  real_mcp_server.py  requirements.txt  setup.py  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
.agent-workspace/TASK-20250912-140042-a96c3b11/: AGENT_REGISTRY.json  agent_prompt_codebase-analyzer-140058-c245f3.txt  agent_prompt_comparison-analyst-140138-636f30.txt  agent_prompt_mcp-researcher-140049-872580.txt
.agent-workspace/TASK-20250912-140042-a96c3b11/findings/: codebase-analyzer-140058-c245f3_findings.jsonl  mcp-researcher-140049-872580_findings.jsonl
.agent-workspace/TASK-20250912-140042-a96c3b11/logs/: deploy_codebase-analyzer-140058-c245f3.json  deploy_comparison-analyst-140138-636f30.json  deploy_mcp-researcher-140049-872580.json
.agent-workspace/TASK-20250912-140042-a96c3b11/progress/: codebase-analyzer-140058-c245f3_progress.jsonl  comparison-analyst-140138-636f30_progress.jsonl  mcp-researcher-140049-872580_progress.jsonl
.agent-workspace/registry/: GLOBAL_REGISTRY.json
docs/: MCP_TOOLS.md
examples/: config.json  demo.sh
scripts/: deploy.sh  init.sh  list.sh  monitor.sh  status.sh  update.sh
src/: cli.ts  index.ts  server.ts  test.ts
src/examples/: config.json
src/schemas/: common.ts
src/tools/: index.ts  tool.create_real_task.ts  tool.deploy_headless_agent.ts  tool.get_agent_output.ts  tool.get_real_task_status.ts  tool.kill_real_agent.ts  tool.report_agent_finding.ts  tool.spawn_child_agent.ts  tool.update_agent_progress.ts  util.comprehensive_status.ts
src/types/: env.ts
src/utils/: fs.ts  logger.ts  pathutil.ts  prompt.ts  resources.ts  tmux.ts  workspace.ts
