[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-orchestrator-mcp"
version = "1.0.0"
description = "MCP server for orchestrating headless Claude agents with anti-spiral protection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["claude", "mcp", "orchestrator", "agents", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "flake8"
]

[project.urls]
Homepage = "https://github.com/your-org/claude-orchestrator-mcp"
Repository = "https://github.com/your-org/claude-orchestrator-mcp"

[project.scripts]
claude-orchestrator = "real_mcp_server:main"

[tool.black]
line-length = 88
target-version = ['py38']